2002-02-08  Jens Gecius  <jens@gecius.de>

	* v_config.c:	Fixed a #define bug in checkfiles (if you
			do not have TTF on your system it's
			relevant, otherwise not)
			
	* configure.in:	Certain systems seem to have the freetype
			header (v1) in a different directory than
			debian does. Added appropriate check.

2002-02-06  Jens Gecius  <jens@gecius.de>

	* v_config.c: 	Closed a memory hole generated by the
			config-re-read code.
			Changed the default of SetImageSize in
			the .conf to On (Off should be the special
			case for certain cams, not vice versa).

2002-02-05  Jens Gecius  <jens@gecius.de>

	* vgrabbj.c: 	Rearranged the initializing of vgrabbj to
			accomodate a new function: the conf-file
			will be re-read if you send a SIGHUP signal
			to the daemon!
			Moved more stuff to v_config, which has 
			nothing to do with the actual grabbing.
			Adjusted the changed commandline parameters
			in the help output (thanks to Michael)			
			Reorganized memory management (hopefully
			without memory-leak - let me know if it
			causes problems - I'm currently trying to
			run it as long as possible here - 
			unfortunately my usb-drivers are a little
			irrational...

2002-02-03  Jens Gecius  <jens@gecius.de>

			(released 0.8.3)
	
	* v_config.c: 	The usage of a temporary file to be copied to
			the output file is now switchable. If you
			don't want it, use the appropriate command-
			line switch or conf-option. This may impair
			the use of vgrabbj if used on a webserver
			(webserver may access the file while vgrabbj
			writes data).
			
			IMPORTANT!! SWITCHED COMMANDLINE PARAMETER!!

			MAY BREAK YOUR CONFIG!! READ BEFORE USE!!

			If you use vgrabbj with commandline options
			instead of the configuration file, beware that
			the following switches have changed:
			-w (dont/set windowsize) is no -g
			-W (image width) is now -w
			This is due to compliance with POSIX.2 (-W).

	* vgrabbj.c: 	Merged several patches (c) Michael Janssen,